# CsharpCode

./: readme.txt
JobModules/Script/App.Client/: App.Client.csproj  CMakeLists.txt  ClientDebugCommandHandler.cs  Entitas.properties  cmake_install.cmake  generate_components.bat  packages.config
JobModules/Script/App.Client/ArtModule/: ArtModule.cs
JobModules/Script/App.Client/Battle/: ClientDamageInfoCollector.cs
JobModules/Script/App.Client/Bullet/: ClientBulletInfoCollector.cs
JobModules/Script/App.Client/CastObjectUtil/: BaseCastData.cs  BaseGoAssemble.cs  CommonCastData.cs  CommonObjectCastUtil.cs  DoorCastData.cs  Enums.cs  FreeObjectCastData.cs  FreeObjectGoAssemble.cs  PlayerCastData.cs  SceneObjectCastData.cs  SceneObjectGoAssemble.cs  VehicleCastData.cs
JobModules/Script/App.Client/ClientSystems/: Decal.cs  DecalBuilder.cs  DecalPolygon.cs  DecaliciousRenderer.cs  DriveTimeSystem.cs  MouseLockSystem.cs  PingSystem.cs  PlayerSprayPaintUtility.cs  RaycastTestSystem.cs  UserCmdCollectSystem.cs  UserCmdMergeSystem.cs  UserCmdSendSystem.cs  UserCmdUpdateSystem.cs
JobModules/Script/App.Client/Cmd/: RobotUserCmdGenerator.cs  UnityUserCmdGenerator.cs  UnityVehicleCmdGenerator.cs
JobModules/Script/App.Client/FileSystemConfig/: ClientFileSystemConfigManager.cs
JobModules/Script/App.Client/GameMode/: ClientGameCommonModeController.cs  ClientGameSurviveModeController.cs  GameModeUtil.cs
JobModules/Script/App.Client/MessageHandler/: AbstractClientMessageHandler.cs  ClearSceneMessageHandler.cs  ClientGameOverMessageHandler.cs  ClientHeartBeatMessageHandler.cs  DamageInfoMessageHandler.cs  FireInfoAckMessagehandler.cs  PingRespMessageHandler.cs  ServerDebugMessageHandler.cs  SnapshotMessageHandler.cs  SnapshotSyncTimeHandler.cs  StatisticsMessageHandler.cs  UdpIdMessageHandler.cs  UpdateMessageAckMessageHandler.cs
JobModules/Script/App.Client/SceneManagement/: ClientScenePostprocessor.cs
JobModules/Script/App.Client/SessionStates/: ClientOptionLoadState.cs  ClientPreLoadState.cs  ClientProfileSessionStateMachine.cs  ClientSessionStateMachine.cs  ClientSessionStateMachineMonitor.cs  ClientSessionStateProgress.cs  GameModuleFactory.cs  InitUiModuleState.cs  LoadBaseConfigureState.cs  LoadOCConfigState.cs  LoadSceneMapConfig.cs  LoadSubResourceConfigureState.cs  LocalizeSessionSystem.cs  LoginSuccState.cs  PostConfigLoadSystem.cs  PreparingPlayerState.cs  ProfilePreparationState.cs  ProfileState.cs  RequestRoomInfoState.cs  RequestSceneInfoState.cs  UserCmdReplaySystem.cs  WaitSnapshotState.cs
JobModules/Script/App.Client/StartUp/: IClientContextInitilizer.cs
JobModules/Script/App.Client/Tools/: AutoTerrainNavigatorSystem.cs  MinRendererSetSampler.cs  MinRendererSetSystem.cs  ProfileFeature.cs  SampleData.cs  SampleDataPool.cs  SampleDataSubset.cs  TerrainSampler.cs  WoodConflictSystem.cs
JobModules/Script/App.Client/Utility/: CursorLocker.cs  HallUtility.cs
JobModules/Script/App.Shared.Components/: App.Shared.Components.EntitasCodeGen.csproj  App.Shared.Components.csproj  CMakeLists.txt  Dummy.csproj  Entitas.properties  Entitas_premake5.properties  cmake_install.cmake  generate_components.bat  generate_components_premake5.bat  generate_serializer.bat  generate_serializer_premake5.bat
JobModules/Script/App.Shared.Components/Components/: EComponentIds.cs  GameRules.cs
JobModules/Script/AssetBundleManager/: AssetBundleManager.csproj  AssetBundlePool.cs  CMakeLists.txt  IAssetBundleStat.cs  LoadedAssetBundle.cs  OperationFactory.cs  Utility.cs  WarehouseFactory.cs  cmake_install.cmake
JobModules/Script/AssetBundleManager/Editor/: AssetBundleManager.Editor.csproj  AssetbundlesMenuItems.cs  BuildScript.cs  CMakeLists.txt  LocalAssetsModeEditor.cs
JobModules/Script/AssetBundleManager/Operation/: AssetAsyncLoading.cs  AssetBundleLoading.cs  AssetBundleLoadingFromFile.cs  AssetBundleLoadingFromWww.cs  AssetBundleSimulatedLoading.cs  AssetBundleSyncLoading.cs  AssetGroup.cs  AssetLoading.cs  AssetSimulatedLoading.cs  AssetSyncLoading.cs  FailLoading.cs  ManifestLoading.cs  PollingOperation.cs  SceneLoading.cs  SynchronizationMode.cs
JobModules/Script/AssetBundleManager/Warehouse/: AssetBundleWarehouse.cs  AssetBundleWarehouseAddr.cs  AsyncLocalWarehouse.cs  AsyncWebWarehouse.cs  InitRetValue.cs  SimulationWarehouse.cs  SyncWarehouse.cs
JobModules/Script/Utils/: CMakeLists.txt  ICoRoutineManager.cs  Utils.csproj  cmake_install.cmake  gc_manager.cs
JobModules/Script/Utils/Appearance/: AdaptiveContainerImpl.cs  AppearanceSpecification.cs  AppearanceUtils.cs  CharacterSpecification.cs  HallReplaceMaterialShader.cs  IAdaptiveContainer.cs  IAppearanceState.cs  ICharacterLoadResource.cs  IFirstPersonSight.cs  OverrideAnimator.cs  ReplaceMaterialShaderBase.cs  ThirdPersonAppearance.cs
JobModules/Script/Utils/AssetManager/: AssetBundleStat.cs  AssetInfo.cs  DefaultGo.cs  LoadRequest.cs  LoadRequestProfile.cs  SceneRequest.cs  UnityAssetManager.cs  UnityObject.cs  UnityObjectPool.cs  UnityObjectWrapper.cs
JobModules/Script/Utils/Compare/: CompareUtility.cs  IComparableComponent.cs
JobModules/Script/Utils/Concurrent/: BlockingQueue.cs
JobModules/Script/XmlConfig/: AttachedAttributeConfig.cs  AvatarAssetConfig.cs  BulletDropConfig.cs  CMakeLists.txt  CameraConfig.cs  CardConfig.cs  CharacterConfig.cs  CharacterInfoConfig.cs  CharacterStateConfig.cs  ChatConfig.cs  ClientEffectCommon.cs  ClientEffectConfig.cs  ClipDropConfig.cs  ConfigEnum.cs  CreateConfig.cs  DropAreaConfig.cs  DropItemConfig.cs  DropPoolConfig.cs  DynamicPredictionErrorCorrectionConfig.cs  EnvironmentTypeConfig.cs  FirstPersonOffsetConfig.cs  GameItemConfig.cs  GameModeConfig.cs  GameRuleConfig.cs  GlobalDataConfig.cs  GloryItemConfig.cs  HallSystemEnableConfig.cs  HintWindowConfig.cs  IndividuationConfig.cs  InputBlockConfig.cs  ItemBaseConfig.cs  ItemConfig.cs  ItemtimelimitConfig.cs  KillFeedBackConfig.cs  LadderDanConfig.cs  LadderInfoConfig.cs  LadderKingConfig.cs  LadderRankConfig.cs  LadderTimeConfig.cs  LoadingTipConfig.cs  (+51 more)
JobModules/Wise_Unity/Editor/: CMakeLists.txt
(+3704 files in other folders)
